--- a/wiki_person.ipynb
+++ b/wiki_person.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "125dcf97",
    "metadata": {},
    "outputs": [
@@ -16,7 +16,7 @@
        "  'prob': 96.53})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "bc9a8704",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
        "(94, {'de', 'en', 'fr', 'it'})"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
     "                bod += 0.2\n",
     "            elif v['Status'] == 'foreign':\n",
     "                bod += -0.5\n",
-    "        if bod>0:\n",
+    "        if bod>1.1:\n",
     "            lang2cc[f'{lang}'][c] = max(bod, lang2cc[f'{lang}'][c])\n",
     "    api = Api(api_key)\n",
     "    w2iso = {t['fields']['WMF']: t['fields']['qid'] if 'qid' in t['fields'] else None for t in Table(api_key, 'appUZvAm9EHZgC1Eg', 'wiki_lang').all()}\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "id": "ecf37331",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,138 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a0bcf11",
+   "id": "ad2a9d0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7aa40185a9ce4b24a248069f474207c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/100000000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fo = open('/backup/wikidata/wiki_person.tsv', 'w')\n",
+    "fo.write('qid\\tname\\tfn\\tln\\tdesc\\tplace\\tdob\\timage\\tsort\\n')\n",
+    "for i, l in tqdm(enumerate(open('/backup/wikidata/wiki_person.jsonl')), total=100_000_000):\n",
+    "    j = json.loads(l)\n",
+    "    qid = int(j['id'][1:])\n",
+    "    cc = get_wiki_cc(j['country'], j['birth_place'], j['language'])\n",
+    "    name = None\n",
+    "    if j['name_native']:\n",
+    "        name = j['name_native'][0]\n",
+    "    else:\n",
+    "        if j['language']:\n",
+    "            langs = Counter([iso2w[q[5:]] for q in j['language'] if q[5:] in iso2w])\n",
+    "        else:\n",
+    "            langs = Counter()\n",
+    "        langs.update(cc2lang[cc])\n",
+    "        for l, f in langs.most_common():\n",
+    "            if l in j['l']:\n",
+    "                name = j['l'][l][0]\n",
+    "                break\n",
+    "    if not name:\n",
+    "        try:\n",
+    "            name = list(qid_lab_get(qid, 'en', include_alt=False).keys())[0]\n",
+    "        except:\n",
+    "            try:\n",
+    "                name = list(j['l'].values())[0][0]\n",
+    "            except:\n",
+    "                name = ''\n",
+    "    if name:\n",
+    "        namel = name.lower().strip()\n",
+    "        try:\n",
+    "            desc = j['desc']['en'][0]\n",
+    "        except:\n",
+    "            desc = ''\n",
+    "        dob = j['dob'][0][:4] if j['dob'] else ''\n",
+    "        image = j['picture'][0] if j['picture'] else ''\n",
+    "        sort = (int(dob) if dob else 1980)-(50 if image else 0)-(10 if desc else 0)\n",
+    "        \n",
+    "        fn = ''\n",
+    "        if j['fn']:\n",
+    "            fns = qid_lab_get(int(j['fn'][0][6:]), include_alt=True).keys()\n",
+    "            fns = Counter({a:len(a) for a in fns if a in namel})\n",
+    "            if len(fns)>0:\n",
+    "                fn = fns.most_common()[0][0]\n",
+    "\n",
+    "        ln = ''\n",
+    "        if j['ln']:\n",
+    "            fns = qid_lab_get(int(j['ln'][0][6:]), include_alt=True).keys()\n",
+    "            fns = Counter({a:len(a) for a in fns if a in namel})\n",
+    "            if len(fns)>0:\n",
+    "                ln = fns.most_common()[0][0]\n",
+    "        if not fn or not ln:\n",
+    "            if ',' in namel:\n",
+    "                if ' ' in namel.split(',')[0].strip():\n",
+    "                    namel = namel.split(',')[0].strip()\n",
+    "                else:\n",
+    "                    namel = namel.split(',')[1].strip()+' '+namel.split(',')[0].strip()\n",
+    "                #print(name, namel)\n",
+    "            parts = namel.split(' ')\n",
+    "            if len(parts) == 1 and fn:\n",
+    "                if namel.startswith(fn):\n",
+    "                    parts = [fn, namel[len(fn):]]\n",
+    "                elif namel.endswith(fn):\n",
+    "                    parts = [fn, namel[:len(namel)-len(fn)]]\n",
+    "            if len(parts) == 1 and ln:\n",
+    "                if namel.startswith(ln):\n",
+    "                    parts = [namel[len(ln):], ln]\n",
+    "                elif namel.endswith(ln):\n",
+    "                    parts = [namel[:len(namel)-len(ln)], ln]\n",
+    "                \n",
+    "            if len(parts) == 2:\n",
+    "                if fn and parts[0]==fn:\n",
+    "                    ln = parts[1]\n",
+    "                elif fn and parts[1]==fn:\n",
+    "                    ln = parts[0]\n",
+    "                elif ln and parts[1]==ln:\n",
+    "                    fn = parts[0]\n",
+    "                elif ln and parts[0]==ln:\n",
+    "                    fn = parts[1]\n",
+    "                else:\n",
+    "                    fn, ln = parts\n",
+    "            elif len(parts) > 2:\n",
+    "                fn, ln = parts[0], parts[-1]\n",
+    "                    \n",
+    "        fo.write(f'{qid}\\t{name}\\t{fn}\\t{ln}\\t{desc}\\t{cc}\\t{dob}\\t{image}\\t{sort}\\n')\n",
+    "fo.close()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "a84f7bd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'coghetto'"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ln"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "ee77a599",
    "metadata": {},
    "outputs": [
     {
@@ -149,6 +280,20 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [57]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m     cc \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m names:\n\u001b[0;32m---> 20\u001b[0m     rec \u001b[38;5;241m=\u001b[39m \u001b[43mparse\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     21\u001b[0m     titles, fn, ln \u001b[38;5;241m=\u001b[39m [], [], []\n\u001b[1;32m     22\u001b[0m     prob \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m \n",
+      "File \u001b[0;32m/projekti/mondoAPI/pnu/parse.py:168\u001b[0m, in \u001b[0;36mparse\u001b[0;34m(s, normalise)\u001b[0m\n\u001b[1;32m    166\u001b[0m uk_toks \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m    167\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m toks \u001b[38;5;129;01min\u001b[39;00m tok_list:\n\u001b[0;32m--> 168\u001b[0m     tag_rec \u001b[38;5;241m=\u001b[39m \u001b[43mtag\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtoks\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    169\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m tags \u001b[38;5;129;01min\u001b[39;00m tag_rec:\n\u001b[1;32m    170\u001b[0m         rec \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtokens\u001b[39m\u001b[38;5;124m'\u001b[39m: toks, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabels\u001b[39m\u001b[38;5;124m'\u001b[39m: tags[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabels\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcounts\u001b[39m\u001b[38;5;124m'\u001b[39m: tags[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcounts\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprob\u001b[39m\u001b[38;5;124m'\u001b[39m: tags[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprob\u001b[39m\u001b[38;5;124m'\u001b[39m]}\n",
+      "File \u001b[0;32m/projekti/mondoAPI/pnu/parse.py:141\u001b[0m, in \u001b[0;36mtag\u001b[0;34m(toks, width, excludef0)\u001b[0m\n\u001b[1;32m    139\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(probs)):\n\u001b[1;32m    140\u001b[0m     sq \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(i2type[rec[j][i]]) \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(rec)))\n\u001b[0;32m--> 141\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m excludef0 \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28many\u001b[39m([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfn0_\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m a \u001b[38;5;28;01mfor\u001b[39;00m a \u001b[38;5;129;01min\u001b[39;00m sq]):\n\u001b[1;32m    142\u001b[0m         prob \u001b[38;5;241m=\u001b[39m probs[i] \u001b[38;5;241m*\u001b[39m seq_p(sq)\n\u001b[1;32m    143\u001b[0m         tags \u001b[38;5;241m=\u001b[39m [sq, probs[i], prob]\n",
+      "File \u001b[0;32m/projekti/mondoAPI/pnu/parse.py:141\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    139\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(probs)):\n\u001b[1;32m    140\u001b[0m     sq \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(i2type[rec[j][i]]) \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(rec)))\n\u001b[0;32m--> 141\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m excludef0 \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28many\u001b[39m([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfn0_\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m a \u001b[38;5;28;01mfor\u001b[39;00m a \u001b[38;5;129;01min\u001b[39;00m sq]):\n\u001b[1;32m    142\u001b[0m         prob \u001b[38;5;241m=\u001b[39m probs[i] \u001b[38;5;241m*\u001b[39m seq_p(sq)\n\u001b[1;32m    143\u001b[0m         tags \u001b[38;5;241m=\u001b[39m [sq, probs[i], prob]\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
@@ -192,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "efb00768",
+   "id": "1c2054c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1815,9 +1960,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python310",
    "language": "python",
-   "name": "python3"
+   "name": "python310"
   },
   "language_info": {
    "codemirror_mode": {
