nelma types fixing

--- a/wiki4nelma.ipynb
+++ b/wiki4nelma.ipynb
@@ -37,33 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "ad2a9d0b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": "  0%|          | 0/24969448 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "b771ba699da64595b213c617d2e64a67"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "NameError",
+     "evalue": "name 'tqdm' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [8]\u001B[0m, in \u001B[0;36m<cell line: 6>\u001B[0;34m()\u001B[0m\n\u001B[1;32m     37\u001B[0m             rows[l] \u001B[38;5;241m=\u001B[39m lang\n\u001B[1;32m     38\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m l, lang \u001B[38;5;129;01min\u001B[39;00m rows\u001B[38;5;241m.\u001B[39mitems():\n\u001B[0;32m---> 39\u001B[0m     prov \u001B[38;5;241m=\u001B[39m \u001B[43mget_provenance\u001B[49m\u001B[43m(\u001B[49m\u001B[43ml\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mlang\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mno_countries\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m)\u001B[49m\n\u001B[1;32m     40\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m prov:\n\u001B[1;32m     41\u001B[0m         tow \u001B[38;5;241m=\u001B[39m \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00ml\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;130;01m\\t\u001B[39;00m\u001B[38;5;132;01m{\u001B[39;00mtip\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mprov[\u001B[38;5;241m0\u001B[39m]\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124m'\u001B[39m\n",
-      "File \u001B[0;32m/projekti/wikidata/text_utils.py:84\u001B[0m, in \u001B[0;36mget_provenance\u001B[0;34m(text, wiki_lang, no_countries)\u001B[0m\n\u001B[1;32m     82\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m wiki_lang \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m wikilang2provenance:\n\u001B[1;32m     83\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m []\n\u001B[0;32m---> 84\u001B[0m scripts \u001B[38;5;241m=\u001B[39m \u001B[43mget_scripts\u001B[49m\u001B[43m(\u001B[49m\u001B[43mtext\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     85\u001B[0m provs \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mset\u001B[39m()\n\u001B[1;32m     86\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m prov \u001B[38;5;129;01min\u001B[39;00m wikilang2provenance[wiki_lang]:\n",
-      "File \u001B[0;32m/projekti/wikidata/text_utils.py:74\u001B[0m, in \u001B[0;36mget_scripts\u001B[0;34m(s)\u001B[0m\n\u001B[1;32m     72\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m c \u001B[38;5;129;01min\u001B[39;00m detScript:\n\u001B[1;32m     73\u001B[0m         \u001B[38;5;28;01mfor\u001B[39;00m sc \u001B[38;5;129;01min\u001B[39;00m detScript[c]:\n\u001B[0;32m---> 74\u001B[0m             r[sc] \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1\u001B[39m\n\u001B[1;32m     75\u001B[0m uk \u001B[38;5;241m=\u001B[39m \u001B[38;5;28msum\u001B[39m(r\u001B[38;5;241m.\u001B[39mvalues())\n\u001B[1;32m     76\u001B[0m r \u001B[38;5;241m=\u001B[39m {k: \u001B[38;5;28mround\u001B[39m(v \u001B[38;5;241m/\u001B[39m uk, \u001B[38;5;241m2\u001B[39m) \u001B[38;5;28;01mfor\u001B[39;00m k, v \u001B[38;5;129;01min\u001B[39;00m r\u001B[38;5;241m.\u001B[39mmost_common(n\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m3\u001B[39m)}\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [1]\u001B[0m, in \u001B[0;36m<cell line: 6>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[38;5;66;03m#fo.write('qid\\tname\\tfn\\tln\\tdesc\\tplace\\tdob\\timage\\tsort\\n')\u001B[39;00m\n\u001B[1;32m      5\u001B[0m uk \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m0\u001B[39m\n\u001B[0;32m----> 6\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i, l \u001B[38;5;129;01min\u001B[39;00m \u001B[43mtqdm\u001B[49m(\u001B[38;5;28menumerate\u001B[39m(\u001B[38;5;28mopen\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m/backup/wikidata/wikinelma.jsonl\u001B[39m\u001B[38;5;124m'\u001B[39m)), total\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m24_969_448\u001B[39m):\n\u001B[1;32m      7\u001B[0m     j \u001B[38;5;241m=\u001B[39m json\u001B[38;5;241m.\u001B[39mloads(l)\n\u001B[1;32m      8\u001B[0m     qid \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mint\u001B[39m(j[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mwiki_id\u001B[39m\u001B[38;5;124m'\u001B[39m][\u001B[38;5;241m1\u001B[39m:])\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'tqdm' is not defined"
      ]
     }
    ],
